--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <div class="show-information">
                                 <div class="channels">
                                     <div class="grid-channel">
-                                        <div class="row-channel row">
+                                        <div class="row-channel row channel-1">
                                             <div class="channel c-2"><h3>1</h3></div>
                                             <div class="channel c-2">
                                                 <div class="triangle"></div>
@@ -434,9 +434,8 @@
                                                 <div class="triangle"></div>
                                                 <span class="channel-notice"></span>
                                             </div>
-                                            <div class="channel"></div>
                                         </div>
-                                        <div class="row-channel row">
+                                        <div class="row-channel row channel-2">
                                             <div class="channel c-2"><h3>2</h3></div>
                                             <div class="channel c-2">
                                                 <div class="triangle"></div>
@@ -454,9 +453,8 @@
                                                 <div class="triangle"></div>
                                                 <span class="channel-notice"></span>
                                             </div>
-                                            <div class="channel"></div>
                                         </div>
-                                        <div class="row-channel row">
+                                        <div class="row-channel row channel-3">
                                             <div class="channel c-2"><h3>3</h3></div>
                                             <div class="channel c-2">
                                                 <div class="triangle"></div>
@@ -474,9 +472,8 @@
                                                 <div class="triangle"></div>
                                                 <span class="channel-notice"></span>
                                             </div>
-                                            <div class="channel"></div>
                                         </div>
-                                        <div class="row-channel row">
+                                        <div class="row-channel row channel-4">
                                             <div class="channel c-2"><h3>4</h3></div>
                                             <div class="channel c-2">
                                                 <div class="triangle"></div>
@@ -494,9 +491,8 @@
                                                 <div class="triangle"></div>
                                                 <span class="channel-notice"></span>
                                             </div>
-                                            <div class="channel"></div>
                                         </div>
-                                        <div class="row-channel row">
+                                        <div class="row-channel row channel-5">
                                             <div class="channel c-2"><h3>5</h3></div>
                                             <div class="channel c-2">
                                                 <div class="triangle"></div>
@@ -514,9 +510,8 @@
                                                 <div class="triangle"></div>
                                                 <span class="channel-notice"></span>
                                             </div>
-                                            <div class="channel"></div>
                                         </div>
-                                        <div class="row-channel row">
+                                        <div class="row-channel row channel-6">
                                             <div class="channel c-2"><h3>6</h3></div>
                                             <div class="channel c-2">
                                                 <div class="triangle"></div>
@@ -534,11 +529,11 @@
                                                 <div class="triangle"></div>
                                                 <span class="channel-notice"></span>
                                             </div>
-                                            <div class="channel"></div>
                                         </div>
                                     </div>
                                     <div class="grid-signal">
                                         <div class="row-signal row">
+                                            <div class="signal"></div>
                                             <div class="signal c-4">
                                                 <span></span>
                                             </div>
@@ -557,6 +552,8 @@
                                             <div class="signal"></div>
                                         </div>
                                         <div class="row-signal row">
+                                            <div class="signal"></div>
+
                                             <div class="signal c-4">
                                                 <span></span>
                                             </div>
@@ -575,6 +572,8 @@
                                             <div class="signal"></div>
                                         </div>
                                         <div class="row-signal row">
+                                            <div class="signal"></div>
+
                                             <div class="signal c-4">
                                                 <span></span>
                                             </div>
@@ -593,6 +592,8 @@
                                             <div class="signal"></div>
                                         </div>
                                         <div class="row-signal row">
+                                            <div class="signal"></div>
+
                                             <div class="signal c-4">
                                                 <span></span>
                                             </div>
@@ -611,6 +612,8 @@
                                             <div class="signal"></div>
                                         </div>
                                         <div class="row-signal row">
+                                            <div class="signal"></div>
+
                                             <div class="signal c-4">
                                                 <span></span>
                                             </div>
@@ -629,20 +632,27 @@
                                             <div class="signal"></div>
                                         </div>
                                         <div class="row-signal row">
+                                            <div class="signal"></div>
+
                                             <div class="signal c-4">
                                                 <span></span>
+                                                <h5>50</h5>
                                             </div>
                                             <div class="signal c-4">
                                                 <span></span>
+                                                <h5>100</h5>
                                             </div>
                                             <div class="signal c-4">
                                                 <span></span>
+                                                <h5>150</h5>
                                             </div>
                                             <div class="signal c-4">
                                                 <span></span>
+                                                <h5>200</h5>
                                             </div>
                                             <div class="signal c-4">
                                                 <span></span>
+                                                <h5>250</h5>
                                             </div>
                                             <div class="signal"></div>
                                         </div>
@@ -909,7 +919,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="sum-bullet"></div>
+                                    <div class="sum-bullet">
+                                        <div class="triangle-solid"></div>
+                                        <span class="pencil-notice">48</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -922,7 +935,7 @@
                     <div class="footer-above_left">
                         <h4>ПсУ</h4>
                         <div class="footer-above_left-up">
-                            <div class="btns-white btn-footer">
+                            <div class="btns-white btn-footer ktcn-be">
                                 <label>
                                     <input type="checkbox" name="check" />
                                     <span>
@@ -1030,7 +1043,122 @@
                                 </label>
                             </div>
                         </div>
-                        <div class="range-led"></div>
+                        <div class="range-switch">
+                            <div class="tanso">
+                                <h4>1</h4>
+                                <h4>2</h4>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" checked />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" checked />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" checked />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" checked />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" checked />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="toggle">
+                                <label class="switch">
+                                    <span class="slider-wrapper-box"></span>
+                                    <span class="slider-wrapper"></span>
+                                    <input type="checkbox" class="chk" checked />
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                            <div class="btns-white">
+                                <label>
+                                    <input type="checkbox" name="check" value="1" />
+                                    <span><h5>ВКЛ</h5></span>
+                                </label>
+                            </div>
+                            <div class="btns-white">
+                                <label>
+                                    <input type="checkbox" name="check" value="2" />
+                                    <span>
+                                        <h5>ОТКЛ</h5>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="footer-below">
