--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="hearder-down-left_btns">
                                 <div class="btns-circle">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="checkbox" name="cancelChannel" value="1" />
                                         <div class="btn-circle"></div>
                                         <span></span>
                                     </label>
@@ -72,7 +72,7 @@
                                 </div>
                                 <div class="btns-circle">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="checkbox" name="cancelChannel" value="2" />
                                         <div class="btn-circle"></div>
                                         <span></span>
                                     </label>
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="btns-circle">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="checkbox" name="cancelChannel" value="3" />
                                         <div class="btn-circle"></div>
                                         <span></span>
                                     </label>
@@ -88,7 +88,7 @@
                                 </div>
                                 <div class="btns-circle">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="checkbox" name="cancelChannel" value="4" />
                                         <div class="btn-circle"></div>
                                         <span></span>
                                     </label>
@@ -322,28 +322,28 @@
                             <h4>ОТМЕНА</h4>
                             <div class="btns-circle">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="cancelPencil" />
                                     <div class="btn-circle"></div>
                                     <span></span>
                                 </label>
                             </div>
                             <div class="btns-circle">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="cancelPencil" />
                                     <div class="btn-circle"></div>
                                     <span></span>
                                 </label>
                             </div>
                             <div class="btns-circle">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="cancelPencil" />
                                     <div class="btn-circle"></div>
                                     <span></span>
                                 </label>
                             </div>
                             <div class="btns-circle">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="cancelPencil" />
                                     <div class="btn-circle"></div>
                                     <span></span>
                                 </label>
@@ -937,40 +937,88 @@
                                         <div class="row-bullet row">
                                             <div class="bullet c-1"><h3>ПсУ</h3></div>
                                             <div class="bullet c-1 be" style="--i: 1">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>1</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 2">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>2</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 3">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>3</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 4">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>4</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 5">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>5</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 6">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>6</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 7">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>7</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 8">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>8</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 9">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>9</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 10">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>10</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 11">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>11</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                             <div class="bullet c-1 be" style="--i: 12">
+                                                <span>&uarr;</span>
+                                                <span></span>
                                                 <h3>12</h3>
+                                                <span></span>
+                                                <span>&uarr;</span>
                                             </div>
                                         </div>
                                     </div>
@@ -1321,10 +1369,7 @@
                             </div>
                         </div>
                         <div class="btns-blue">
-                            <h4>
-                                ВКЛ <br />
-                                ЛС
-                            </h4>
+                            <h4>ВКЛ ЛС</h4>
                             <label>
                                 <input type="checkbox" name="check" />
                                 <span></span>
